# wrut

./: .justfile  404.html  Cargo.toml  LICENSE  README.adoc  README.md  index.html  print.html  searchindex.js  searchindex.json
.github/workflows/: docs.yml
configuration/: global.html  template.html
docs/: book.toml
docs/src/: SUMMARY.md
docs/src/configuration/: global.md  template.md
docs/src/implementation/: data_storage.md
docs/src/project/: creation.md  management.md
docs/src/setup/: installation.md  setup.md
docs/src/tags/: creation.md  management.md
docs/src/template/: creation.md  macros.md  management.md
docs/src/templates_and_projects/: creating_new_projects.md  creating_new_templates.md  managing_projects.md  managing_templates.md
implementation/: data_storage.html
setup/: installation.html  setup.html
src/: lib.rs  main.rs  utils.rs
src/backend/: comp.rs  config.rs  const.rs  dirs.rs  error.rs  init.rs  list.rs  mod.rs  project.rs  remove.rs  setup.rs  tag.rs  template.rs  utils.rs
src/backend/project/: project.rs
src/backend/setup/: dirs.rs  files.rs  mod.rs  overwrite.rs  setup.rs
src/cli/: cli.rs  mod.rs  util.rs
src/cli/subcommand/: mod.rs
src/cli/subcommand/template/: mod.rs
src/cli/subcommands/: comp.rs  init.rs  list.rs  mod.rs  remove.rs  setup.rs
src/cli/subcommands/tag/: list.rs  (+4 more)
src/wrut/: error.rs  mod.rs
tags/: creation.html  management.html
templates_and_projects/: creating_new_projects.html  creating_new_templates.html  macros.html  managing_projects.html  managing_templates.html
test/: README.org
(+10 files in other folders)
