[package]
name = "wut"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# file management
walkdir = "2"
home = "0.5"

# error management
anyhow = "1.0"
thiserror = "1.0"

# cli
clap-verbosity-flag = "2.0"
log = "0.4"
clap_complete = "4.0"
termion = "2.0"
env_logger = "0.9"
clap = { version = "4.0.26", features = ["derive"] }
