[package]
name = "wrut"
version = "0.1.2"
edition = "2021"
license = "MIT"
repository = "https://github.com/y-mx-b/wrut"
homepage = "https://y-mx-b.github.io/wrut"
description = "A utility to manage project templates."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# file management
walkdir = "2"
home = "0.5"

# error management
anyhow = "1.0"
thiserror = "1.0"

# cli
clap = { version = "4.0.26", features = ["derive", "string"] } 
clap_complete = "4.0" 
termtree = "0.4" 

# TODO maybe add a tui someday
# termion = "2.0"

# logging
clap-verbosity-flag = "2.0"
log = "0.4"
env_logger = "0.9"

# config
toml = "0.5"
serde = { version = "1.0", features = ["derive"]}
